Update after feedback e-mails Changed font Fixed one missing FAQ answer Fixed Jury not being in English Fixed meet the team (encouraging mobile users to zoom in on HD image) Removed PDF logos and replaced the assembly for a pill Fixed miscelaneous out of place bugs

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -684,6 +684,11 @@ video {
   margin-bottom: 1rem;
 }
 
+.my-\[1vh\] {
+  margin-top: 1vh;
+  margin-bottom: 1vh;
+}
+
 .mb-4 {
   margin-bottom: 1rem;
 }
@@ -698,6 +703,34 @@ video {
 
 .mr-\[7vw\] {
   margin-right: 7vw;
+}
+
+.mr-\[1vw\] {
+  margin-right: 1vw;
+}
+
+.mr-\[2vw\] {
+  margin-right: 2vw;
+}
+
+.mt-\[2vh\] {
+  margin-top: 2vh;
+}
+
+.mt-\[10vh\] {
+  margin-top: 10vh;
+}
+
+.mt-\[15vh\] {
+  margin-top: 15vh;
+}
+
+.box-border {
+  box-sizing: border-box;
+}
+
+.box-content {
+  box-sizing: content-box;
 }
 
 .inline {
@@ -744,6 +777,36 @@ video {
   height: 1.25rem;
 }
 
+.h-\[80vw\] {
+  height: 80vw;
+}
+
+.h-\[100vw\] {
+  height: 100vw;
+}
+
+.h-\[70vw\] {
+  height: 70vw;
+}
+
+.h-\[80vh\] {
+  height: 80vh;
+}
+
+.h-\[90vw\] {
+  height: 90vw;
+}
+
+.h-\[90vh\] {
+  height: 90vh;
+}
+
+.h-fit {
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
 .max-h-\[6vh\] {
   max-height: 6vh;
 }
@@ -758,6 +821,14 @@ video {
 
 .min-h-screen {
   min-height: 100vh;
+}
+
+.min-h-\[80vh\] {
+  min-height: 80vh;
+}
+
+.min-h-\[80vw\] {
+  min-height: 80vw;
 }
 
 .w-full {
@@ -796,6 +867,14 @@ video {
   width: 1.25rem;
 }
 
+.w-\[80vh\] {
+  width: 80vh;
+}
+
+.w-\[90vh\] {
+  width: 90vh;
+}
+
 .max-w-\[50vw\] {
   max-width: 50vw;
 }
@@ -814,6 +893,10 @@ video {
 
 .max-w-\[1vw\] {
   max-width: 1vw;
+}
+
+.max-w-none {
+  max-width: none;
 }
 
 .flex-1 {
@@ -835,6 +918,19 @@ video {
 .rotate-180 {
   --tw-rotate: 180deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.rotate-90 {
+  --tw-rotate: 90deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.touch-auto {
+  touch-action: auto;
+}
+
+.grid-flow-row {
+  grid-auto-flow: row;
 }
 
 .grid-flow-dense {
@@ -887,6 +983,14 @@ video {
 
 .gap-2 {
   gap: 0.5rem;
+}
+
+.gap-3 {
+  gap: 0.75rem;
+}
+
+.overflow-auto {
+  overflow: auto;
 }
 
 .rounded-2xl {
@@ -975,6 +1079,11 @@ video {
      object-fit: contain;
 }
 
+.object-none {
+  -o-object-fit: none;
+     object-fit: none;
+}
+
 .p-2 {
   padding: 0.5rem;
 }
@@ -1021,6 +1130,10 @@ video {
 
 .p-1 {
   padding: 0.25rem;
+}
+
+.p-\[8vw\] {
+  padding: 8vw;
 }
 
 .py-\[1vh\] {
@@ -1083,6 +1196,16 @@ video {
   padding-bottom: 3vh;
 }
 
+.px-\[8vw\] {
+  padding-left: 8vw;
+  padding-right: 8vw;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
 .pb-0 {
   padding-bottom: 0px;
 }
@@ -1111,6 +1234,22 @@ video {
   padding-bottom: 2vh;
 }
 
+.pr-\[1vw\] {
+  padding-right: 1vw;
+}
+
+.pl-2 {
+  padding-left: 0.5rem;
+}
+
+.pl-\[1vw\] {
+  padding-left: 1vw;
+}
+
+.pl-\[2vw\] {
+  padding-left: 2vw;
+}
+
 .text-left {
   text-align: left;
 }
@@ -1119,8 +1258,8 @@ video {
   text-align: center;
 }
 
-.font-gajraj {
-  font-family: "Gajraj One", cursive;
+.font-genos {
+  font-family: "Genos", cursive;
 }
 
 .text-sm {
@@ -1141,6 +1280,16 @@ video {
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .font-thin {
@@ -1323,6 +1472,26 @@ video {
     margin-right: 0vw;
   }
 
+  .md\:my-\[4vh\] {
+    margin-top: 4vh;
+    margin-bottom: 4vh;
+  }
+
+  .md\:my-\[8vh\] {
+    margin-top: 8vh;
+    margin-bottom: 8vh;
+  }
+
+  .md\:my-0 {
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+
+  .md\:my-auto {
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+
   .md\:mt-\[40vh\] {
     margin-top: 40vh;
   }
@@ -1339,6 +1508,14 @@ video {
     margin-right: 5vw;
   }
 
+  .md\:mt-\[15vh\] {
+    margin-top: 15vh;
+  }
+
+  .md\:hidden {
+    display: none;
+  }
+
   .md\:h-\[22vh\] {
     height: 22vh;
   }
@@ -1347,8 +1524,24 @@ video {
     height: 10vh;
   }
 
+  .md\:h-full {
+    height: 100%;
+  }
+
+  .md\:h-\[80vh\] {
+    height: 80vh;
+  }
+
   .md\:max-h-\[10vh\] {
     max-height: 10vh;
+  }
+
+  .md\:min-h-full {
+    min-height: 100%;
+  }
+
+  .md\:min-h-\[60vh\] {
+    min-height: 60vh;
   }
 
   .md\:w-\[12vw\] {
@@ -1367,6 +1560,10 @@ video {
     width: 30vw;
   }
 
+  .md\:w-\[80vw\] {
+    width: 80vw;
+  }
+
   .md\:max-w-\[40vw\] {
     max-width: 40vw;
   }
@@ -1375,12 +1572,25 @@ video {
     max-width: 15vw;
   }
 
+  .md\:rotate-0 {
+    --tw-rotate: 0deg;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .md\:gap-3 {
     gap: 0.75rem;
+  }
+
+  .md\:gap-2 {
+    gap: 0.5rem;
+  }
+
+  .md\:gap-0 {
+    gap: 0px;
   }
 
   .md\:p-\[2vw\] {
@@ -1401,6 +1611,18 @@ video {
 
   .md\:p-4 {
     padding: 1rem;
+  }
+
+  .md\:p-\[4vw\] {
+    padding: 4vw;
+  }
+
+  .md\:p-\[3vw\] {
+    padding: 3vw;
+  }
+
+  .md\:p-\[6vh\] {
+    padding: 6vh;
   }
 
   .md\:px-\[20vw\] {
@@ -1426,6 +1648,16 @@ video {
   .md\:px-\[5vw\] {
     padding-left: 5vw;
     padding-right: 5vw;
+  }
+
+  .md\:px-\[2vw\] {
+    padding-left: 2vw;
+    padding-right: 2vw;
+  }
+
+  .md\:py-\[4vh\] {
+    padding-top: 4vh;
+    padding-bottom: 4vh;
   }
 
   .md\:pb-0 {
@@ -1463,11 +1695,20 @@ video {
     font-size: 1.125rem;
     line-height: 1.75rem;
   }
+
+  .md\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
 }
 
 @media (min-width: 1024px) {
   .lg\:col-span-1 {
     grid-column: span 1 / span 1;
+  }
+
+  .lg\:col-span-2 {
+    grid-column: span 2 / span 2;
   }
 
   .lg\:m-8 {
@@ -1482,6 +1723,16 @@ video {
   .lg\:my-auto {
     margin-top: auto;
     margin-bottom: auto;
+  }
+
+  .lg\:my-\[4vw\] {
+    margin-top: 4vw;
+    margin-bottom: 4vw;
+  }
+
+  .lg\:my-\[8vw\] {
+    margin-top: 8vw;
+    margin-bottom: 8vw;
   }
 
   .lg\:mt-\[4vh\] {
@@ -1516,6 +1767,10 @@ video {
     width: 15vw;
   }
 
+  .lg\:w-\[40vw\] {
+    width: 40vw;
+  }
+
   .lg\:max-w-\[25vw\] {
     max-width: 25vw;
   }
@@ -1526,6 +1781,10 @@ video {
 
   .lg\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .lg\:gap-3 {
+    gap: 0.75rem;
   }
 
   .lg\:p-2 {
@@ -1552,6 +1811,14 @@ video {
     padding: 3.5rem;
   }
 
+  .lg\:p-\[8vh\] {
+    padding: 8vh;
+  }
+
+  .lg\:p-\[10vh\] {
+    padding: 10vh;
+  }
+
   .lg\:py-8 {
     padding-top: 2rem;
     padding-bottom: 2rem;
@@ -1565,6 +1832,41 @@ video {
   .lg\:px-\[15vw\] {
     padding-left: 15vw;
     padding-right: 15vw;
+  }
+
+  .lg\:py-\[10vh\] {
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+  }
+
+  .lg\:py-\[8vh\] {
+    padding-top: 8vh;
+    padding-bottom: 8vh;
+  }
+
+  .lg\:py-\[4vh\] {
+    padding-top: 4vh;
+    padding-bottom: 4vh;
+  }
+
+  .lg\:py-\[2vh\] {
+    padding-top: 2vh;
+    padding-bottom: 2vh;
+  }
+
+  .lg\:py-\[1vh\] {
+    padding-top: 1vh;
+    padding-bottom: 1vh;
+  }
+
+  .lg\:py-0 {
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+
+  .lg\:py-16 {
+    padding-top: 4rem;
+    padding-bottom: 4rem;
   }
 
   .lg\:text-lg {
